force-app/main/default/objects/Ticket__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <label>Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Team</fullName>
                <default>true</default>
                <label>Internal Team</label>
            </value>
            <value>
                <fullName>External Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>