force-app/main/default/objects/Ticket__c/fields/Level_2_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Level 2 should be the salesforce admin</inlineHelpText>
    <label>Level 2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>