force-app/main/default/objects/Ticket__c/fields/Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Approver 1 should be your Line Manager</inlineHelpText>
    <label>Primary Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>