force-app/main/default/objects/Ticket__c/fields/Ticket_Discription__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Discription__c</fullName>
    <inlineHelpText>discribe your ticket/issue here</inlineHelpText>
    <label>Ticket Discription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>