force-app/main/default/objects/Ticket__c/fields/Ticket_Name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Name__c</fullName>
    <inlineHelpText>Add Subject of your Ticket</inlineHelpText>
    <label>Ticket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>